--- a/Fiori-ui5-onedemand-inicio-curso/package.json
+++ b/Fiori-ui5-onedemand-inicio-curso/package.json
@@ -1,14 +1,35 @@
 {
-    "name": "ui5.walkthrough",
-    "version": "1.0.0",
-    "description": "The UI5 walkthrough application",
-    "scripts": {
-        "start": "ui5 serve -o test/mockServer.html",
-        "build": "ui5 build --all --clean-dest",
-        "serve-dist": "ws --compress -d dist --open"
-    },
-    "devDependencies": {
-        "local-web-server": "^5.3.1",
-        "ui5-middleware-simpleproxy": "^3.2.10"
-    }
+  "name": "ui5.walkthrough",
+  "version": "0.0.1",
+  "description": "The UI5 walkthrough application",
+  "scripts": {
+    "serve-dist": "ws --compress -d dist --open",
+    "start_old": "ui5 serve -o test/mockServer.html",
+    "build_old": "ui5 build --all --clean-dest",
+    "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#app-tile\"",
+    "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandboxMockServer.html?sap-ui-xx-viewCache=false#app-tile\"",
+    "start-noflp": "fiori run --open \"index.html?sap-ui-xx-viewCache=false\"",
+    "start-variants-management": "fiori run --open \"preview.html?sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\"",
+    "build": "ui5 build -a --clean-dest --include-task=generateCachebusterInfo",
+    "deploy": "fiori verify",
+    "deploy-config": "fiori add deploy-config",
+    "start-mock": "fiori run --open \"test/flpSandboxMockServer.html?sap-ui-xx-viewCache=false#app-tile\"",
+    "unit-tests": "fiori run --open 'test/unit/unitTests.qunit.html'",
+    "int-tests": "fiori run --open 'test/integration/opaTests.qunit.html'"
+  },
+  "devDependencies": {
+    "local-web-server": "^5.3.1",
+    "ui5-middleware-simpleproxy": "^3.2.10",
+    "@ui5/cli": "^3.0.0",
+    "@sap/ux-ui5-tooling": "1",
+    "rimraf": "3.0.2"
+  },
+  "private": true,
+  "sapuxLayer": "CUSTOMER_BASE",
+  "keywords": [
+    "ui5",
+    "openui5",
+    "sapui5"
+  ],
+  "main": "webapp/index.html"
 }
